# hows-the-volume

./: .gitignore  CNAME  LICENSE  README.md  index.html  package-lock.json  vite-manifest.json
.github/workflows/: ci.yml  deploy.yml
_app/: version.json
_app/immutable/: error.svelte-7bbd068b.js  error.svelte-ae974166.js  error.svelte-c4268e58.js  error.svelte-ddefbb8d.js  manifest.json  start-04ae92a3.js  start-05236703.js  start-054c98a3.js  start-0e662c64.js  start-0ffdd3bf.js  start-11f25455.js  start-1a567297.js  start-1b82bc52.js  start-1c56c8be.js  start-1dc34d9e.js  start-20c66762.js  start-2959821c.js  start-2cbc5ba3.js  start-2cdd4c88.js  start-2eb8aa7e.js  start-2ec000da.js  start-2fd02cca.js  start-2fd7deaa.js  start-3860ad92.js  start-3899c172.js  start-3951d892.js  start-3c0c9e76.js  start-3ca28ee9.js  start-3deea27a.js  start-3df9d1ab.js  start-3f296374.js  start-4827f57b.js  start-4df28611.js  start-4f8b0dc0.js  start-5207b4c2.js  start-54cdd447.js  start-57b9f458.js  start-587c9fc3.js  start-5b225b9d.js  start-623d3e3f.js  (+41 more)
_app/immutable/assets/: 2.80beafb3.css  2.CtsJU_OS.css  _layout-28c9e527.css  _page-3c9ba9c8.css  _page-d4efd55b.css  _page.04f13304.css  _page.172264c6.css  _page.78b453d9.css  _page.BH3cRqYa.css  _page.a79bc16e.css  _page.d047858e.css  _page.d0b2482e.css  _page.da7b7908.css
_app/immutable/chunks/: 0-c4609f80.js  0-d2a3fc32.js  0.0f585bd2.js  0.2e210570.js  1-00c37aa1.js  1-0ddb17be.js  1-1907074b.js  1-200cacf6.js  1-295ffbf1.js  1-605c32f9.js  1-631e11b6.js  1-670e7cdf.js  1-acaff0ae.js  1.22155e04.js  1.3fdc172d.js  1.456f8263.js  1.4d8f4ad4.js  1.63830967.js  1.8167f4cd.js  1.8811ddff.js  1.b7aa35be.js  1.d040d9c7.js  1.e9f1be4c.js  1.f26ffbfa.js  2-3f0992a6.js  2-5f41031f.js  2-7c82274e.js  2-926e2fb9.js  2-ba0cd1bd.js  2-c2689da0.js  2-d51e7f98.js  2.4bfc7fc5.js  2.5d6d9358.js  2.6ffcc86a.js  2.7ba2bfac.js  2.97eacafd.js  2.f94251e0.js  2.fc33a6c8.js  disclose-version.By_3S8gV.js  disclose-version.D0lviTXV.js  (+69 more)
_app/immutable/components/: error.svelte-056f017e.js  error.svelte-101bae7b.js  error.svelte-1d048548.js  error.svelte-3ba400e4.js  error.svelte-4a385676.js  error.svelte-58151009.js  error.svelte-7dee33fd.js  error.svelte-a9832cc1.js  error.svelte-eeffedeb.js
_app/immutable/entry/: _layout.svelte.70827c8e.js  _layout.svelte.f9120d84.js  _page.svelte.10cd193f.js  _page.svelte.1ee5906a.js  _page.svelte.6af3d472.js  _page.svelte.8fa245e7.js  _page.svelte.b2f2b483.js  _page.svelte.c5f52eb4.js  _page.svelte.d88bc842.js  app.1d6d43e9.js  app.5e8162ce.js  app.81a045bb.js  (+44 more)
server/: .env  .gitignore  Cargo.toml  README.md  build.rs  clean_log.sh  db_init.sql  restart.sh  setup.sh
server/assets/: README.md
server/src/: main.rs  state.rs
site/: .eslintrc.cjs  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js
site/.husky/: pre-push
site/src/: App.svelte  app.html
(+110 files in other folders)
