[package]
name = "hows-the-volume-server"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "symbols"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2", "tokio"] }                 # The webapp framework of choice.
dotenv = "0.15.0"                                                           # For accessing env vars stored in .env
serde = { version = "1.0.219", features = ["derive"] }                      # For JSON serialization.
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite"] } # For storing counts. Overkill.
tracing = "0.1.41"                                                          # For tracing, alongside tracing-appender and tracing-subscriber.
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.43.0", features = ["full"] }                         # tokio's used for async.
tower = "0.5.1"                                                             # Used alongside tower-http for serving files.
tower-http = { version = "0.6.2", features = ["full"] }

[build-dependencies]
dotenv = "0.15.0" # For accessing env vars stored in .env
